# asm_8051

./: .gitignore  CMakeLists.txt  Makefile  README.md  readme.md  readme.txt
.github/workflows/: cmake-win.yml  make-ubuntu.yml  make-windows.yml
asm_table/: CMakeLists.txt  Makefile  asm_list.csv  dis_list.csv  operand_list.csv  readme.txt
doc/: 8051-inst-doc0509.docx  8051_inst.xlsx  inst_v1.csv  inst_v1_ar.csv  inst_v1_bool.csv  inst_v1_dt.csv  inst_v1_lo.csv  inst_v1_pb.csv  m1.csv  m2_add_calc.csv  m2_all.xlsx  m2_tmp.csv  m3.csv  m3_tmp.csv  new 1.txt
src/: CMakeLists.txt  Makefile  asm8051.cpp  asm8051.h  asm8051_lex .h  asm8051_lex.cpp  asm8051_lex.h  asm_8051_keywords.cpp  asm_8051_keywords.h  asm_context.cpp  asm_context.h  asm_extend_jmp.cpp  asm_extend_jmp.h  asm_extend_keywords.cpp  asm_extend_keywords.h  asm_keywords.cpp  asm_keywords.h  asm_keywords_tmp.cpp.txt  asm_macro_keywords.cpp  asm_macro_keywords.h  asm_table.cpp  asm_table.h  asm_table_tmp.cpp.txt  asm_to.cpp  asm_to.h  asm_token.cpp  asm_token.h  asmc51_predefined_symbol.cpp  asmc51_predefined_symbol.h  bit_addr_parse.cpp  bit_addr_parse.h  code_gen_param_parse.cpp  code_gen_param_parse.h  dis8051.cpp  dis8051.h  dis_keywords.cpp  dis_keywords.h  dis_keywords_tmp.cpp.txt  hex_generator.cpp  hex_generator.h  (+13 more)
src/api/: asm8051_api.cpp  asm8051_api.h
src/common/: argv.h  dir_file.cpp  myexecute.cpp  mylog.cpp  mylog.h  number2str.cpp  number2str.h  osdialog_win.c  str2number.cpp  text_encode.cpp  text_encode.h  trim.cpp
src/common/mylog_test/: main.cpp  mylog.cpp  mylog.h
src/context/: comp_context.cpp  comp_context.h  icode.cpp  icode.h
src/lex_yacc/: CMakeLists.txt  Makefile  driver.cpp  driver.h  location.hh  parser.cpp  parser.h  parser.output  position.hh  scanner.cpp  scanner.h  stack.hh
src/lex_yacc/ly/: Makefile  comp_context_gen.cpp  comp_context_gen_defs.h  comp_context_gen_funcs.cpp  comp_context_gen_funcs_tmp.cpp.tmp  comp_context_gen_funcs_tmp.cpp_token.tmp  comp_context_gen_funcs_token.cpp  comp_context_yy_debug.tmp  parser.yy  parser_no_code.dot  parser_no_code.yy  parser_temp.yy  parser_test.yy  scanner.ll  scanner_no_code.ll  scanner_temp.ll  scanner_test.ll  scanner_v2.ll
src/lex_yacc_adapt/: comp_context_yy_debug.cpp  comp_context_yy_debug.h  driver.cpp  driver.h  scanner.h  token_defs.cpp  token_defs.h
src/misc/: CMakeLists.txt  Makefile
src/misc/cpp_lib/: cpp_api.cpp  cpp_api.h  simplecpp.cpp  simplecpp_main.cpp
src/misc/json_lib/: json_io.cpp  json_io.h
src/misc/util/: argv.h  dir_file.cpp  dir_file.h  main_var.cpp  main_var.h  myexecute.cpp  myexecute.h  mylog.cpp  mylog.h  number2str.cpp  number2str.h  split.cpp  split.h  str2number.cpp  str2number.h  string_eval.cpp  string_eval.h  text_encode.cpp  trim.h
test/: CMakeLists.txt  Makefile  asm_test1.a51  asm_test1.asm  asm_test1_keil.hex  asm_test1_self.a51  asm_test1_self.yy  asm_test1_yy.a51  asm_test2.a51  asm_test2.asm  asm_test2.hex  asm_test2.hex_out.hex  asm_test2_keil.hex  asm_test2_self.a51  asm_test_code_gen.cpp  asm_test_code_gen.h  reg51_asm.h  sim8051_log.tmp  stc8a_test1_keil.hex  stc8a_test1_self.a51  stc8a_test2.a51  stc8a_test2_keil.hex  stc8a_test2_self.a51  stc8a_test3.a51  stc8a_test3_keil.a51  stc8a_test3_keil.hex  stc8a_test4.a51  stc8a_test4_keil.hex  stc8a_test4_self.a51  stc8a_test5.a51  stc8a_test5_keil.hex  stc8a_test5_self.a51  stc8a_test6.a51  stc8a_test6_keil.hex  stc8a_test6_self.a51  stc_hc595.a51  stc_hc595_keil.hex  stc_hc595_self.a51  stc_hongwai1.a51  stc_hongwai1_keil.a51  (+54 more)
test/uv_proj/: test1.uvgui.songjiangshan  test1.uvopt  test1.uvproj  test_any.a51
test/uv_proj/Listings/: asm_test1.lst  asm_test2.lst  stc8a_test1.lst  stc8a_test2.lst  stc8a_test3.lst  stc8a_test4.lst  stc8a_test5.lst  stc8a_test6.lst  stc_hc595.lst  stc_hongwai1.lst  stc_paomadeng.lst  test1.lst  test1.m51  test_any.lst
test/uv_proj/Objects/: test1.build_log.htm  test1.hex  test1.lnp
tools/: CMakeLists.txt  Makefile
tools/asm_csv_to_code/: Makefile  readme.txt
tools/asm_csv_to_code/qt_proj/asm_csv_to_code/: asm_csv_to_code.pro  codegenwid.cpp
tools/asm_csv_to_code/src/: CMakeLists.txt  Makefile  csv_io.cpp  csv_io.h  csv_to_asmc.cpp  csv_to_asmc.h  csv_to_csv.cpp  csv_to_csv.h  csv_to_dis.cpp  csv_to_dis.h  csv_to_genasm.cpp  csv_to_genasm.h  main_console.cpp  main_console.h  replace.h  split.cpp
tools/lexpp/: readme.txt
tools/lexpp/qt_proj/build-lexpp-Desktop_Qt_5_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
tools/lexpp/qt_proj/lexpp/: lexpp.pro
tools/lexpp/src/: CMakeLists.txt  Makefile  lex_file_io.cpp  lex_file_io.h  lex_file_template.cpp  lex_file_template.h  main_console.cpp
tools/yacc_to_front_code/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.txt  yacc_to_front_code.pro
tools/yacc_to_front_code/src/: CMakeLists.txt  Makefile  bison_file_io.cpp  bison_file_io.h  main_console.cpp  yy_file_template.cpp  yy_file_template.h
